@@ -19,6 +19,26 @@
 
 #include "dirwalk.h"
 #include "progressbar.h"
+
+/*
+	The following section renames global variables defined in SDL_Pango.h to avoid errors during linking.
+	It is okay to rename these variables because they are constants.
+	SDL_Pang.h is included by fonts.h.  
+*/
+#define _MATRIX_WHITE_BACK _MATRIX_WHITE_BACK1
+#define MATRIX_WHITE_BACK MATRIX_WHITE_BACK1
+#define _MATRIX_BLACK_BACK _MATRIX_BLACK_BACK1
+#define MATRIX_BLACK_BACK MATRIX_BLACK_BACK1
+#define _MATRIX_TRANSPARENT_BACK_BLACK_LETTER _MATRIX_TRANSPARENT_BACK_BLACK_LETTER1
+#define MATRIX_TRANSPARENT_BACK_BLACK_LETTER MATRIX_TRANSPARENT_BACK_BLACK_LETTER1
+#define _MATRIX_TRANSPARENT_BACK_WHITE_LETTER _MATRIX_TRANSPARENT_BACK_WHITE_LETTER1
+#define MATRIX_TRANSPARENT_BACK_WHITE_LETTER MATRIX_TRANSPARENT_BACK_WHITE_LETTER1
+#define _MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER _MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER1
+#define MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER1
+/*
+	The renaming ends here.
+*/
+
 #include "fonts.h"
 
 #include "debug.h"
