@@ -17,6 +17,25 @@
 #define gettext_noop(String) String
 #endif
 
+/*
+	The following section renames global variables defined in SDL_Pango.h to avoid errors during linking.
+	It is okay to rename these variables because they are constants.
+	SDL_Pang.h is included by fonts.h.  
+*/
+#define _MATRIX_WHITE_BACK _MATRIX_WHITE_BACK2
+#define MATRIX_WHITE_BACK MATRIX_WHITE_BACK2
+#define _MATRIX_BLACK_BACK _MATRIX_BLACK_BACK2
+#define MATRIX_BLACK_BACK MATRIX_BLACK_BACK2
+#define _MATRIX_TRANSPARENT_BACK_BLACK_LETTER _MATRIX_TRANSPARENT_BACK_BLACK_LETTER2
+#define MATRIX_TRANSPARENT_BACK_BLACK_LETTER MATRIX_TRANSPARENT_BACK_BLACK_LETTER2
+#define _MATRIX_TRANSPARENT_BACK_WHITE_LETTER _MATRIX_TRANSPARENT_BACK_WHITE_LETTER2
+#define MATRIX_TRANSPARENT_BACK_WHITE_LETTER MATRIX_TRANSPARENT_BACK_WHITE_LETTER2
+#define _MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER _MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER2
+#define MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER MATRIX_TRANSPARENT_BACK_TRANSPARENT_LETTER2
+/*
+	The renaming ends here.
+*/
+
 #include "fonts.h"
 #include "i18n.h"
 #include "progressbar.h"
